--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
     "copyData": "node build/copyDocsData.js",
     "prebuild": "npm run clean",
     "prepare": "npm run build",
-    "sprite": "node build/custom-sprite"
+    "sprite": "node build/custom-sprite",
+    "prerelease": "cross-env NODE_ENV=prerelease npm-publish-prerelease",
+    "deploy": "node ./deploy.js",
+    "postpublish": "npm-run-all build build:docs deploy"
   },
   "main": "dist/icons.js",
   "module": "dist/icons.esm.js",
-  "dependencies": {},
+  "dependencies": {
+    "gh-pages": "^2.1.1"
+  },
   "devDependencies": {
     "@rei/cdr-tokens": "^1.1.1",
     "@rei/cedar": "^2.0.2",
@@ -36,6 +41,7 @@
     "inquirer": "^6.5.2",
     "lodash": "^4.17.15",
     "node-sass": "^4.12.0",
+    "npm-publish-prerelease": "^1.0.2",
     "npm-run-all": "^4.1.5",
     "rimraf": "^2.7.1",
     "sass-loader": "^7.3.1",
