Don't build individual icon components, include svgs in dist

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rei/cedar-icons",
-  "version": "1.0.0-beta.0",
+  "version": "1.0.0-beta.1",
   "homepage": "https://rei.github.io/cedar-icons/",
   "description": "REI Cedar Icon Library",
   "license": "MIT",
@@ -11,14 +11,14 @@
   "author": "REI Software Engineering",
   "scripts": {
     "serve": "npm run copyData && vue-cli-service serve",
-    "build": "npm-run-all build:data build:components build:full-sprite copyData",
+    "build": "npm-run-all build:data build:full-sprite copyIcons copyData",
     "test": "exit 0",
     "lint": "npm run copyData && vue-cli-service lint",
-    "build:components": "node build/icon-component",
     "build:data": "node build/icon-json",
     "build:full-sprite": "node build/all-sprite",
     "build:docs": "npm run copyData && vue-cli-service build",
     "clean": "rimraf dist",
+    "copyIcons": "node build/copyIcons.js",
     "copyData": "node build/copyDocsData.js",
     "prebuild": "npm run clean",
     "prepare": "npm run build",
