--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "author": "REI Software Engineering",
   "scripts": {
-    "serve": "npm run copyData && vue-cli-service serve",
+    "dev": "npm run copyData && vue-cli-service serve",
     "build": "npm-run-all build:data build:full-sprite copyIcons copyData",
     "test": "exit 0",
     "lint": "npm run copyData && vue-cli-service lint",
@@ -33,8 +33,8 @@
     "gh-pages": "^2.1.1"
   },
   "devDependencies": {
-    "@rei/cdr-tokens": "^1.1.1",
-    "@rei/cedar": "^2.0.2",
+    "@rei/cdr-tokens": "^2.0.0",
+    "@rei/cedar": "^3.0.0",
     "@vue/cli-plugin-babel": "^3.11.0",
     "@vue/cli-plugin-eslint": "^3.11.0",
     "@vue/cli-service": "^3.11.0",
