--- a/docs-src/package.json
+++ b/docs-src/package.json
@@ -21,8 +21,9 @@
     "gh-pages": "^2.1.1"
   },
   "devDependencies": {
-    "@rei/cdr-tokens": "^2.0.0",
-    "@rei/cedar": "^3.0.0",
+    "@rei/cdr-component-variables": "^1.1.0",
+    "@rei/cdr-tokens": "^3.0.0-beta.5",
+    "@rei/cedar": "^4.0.0-beta.9",
     "@vue/cli-plugin-babel": "^3.11.0",
     "@vue/cli-plugin-eslint": "^3.11.0",
     "@vue/cli-service": "^4.1.1",
