move copyDocsData into docs directory

--- a/package.json
+++ b/package.json
@@ -10,13 +10,12 @@
   },
   "author": "REI Software Engineering",
   "scripts": {
-    "build": "npm-run-all build:data build:full-sprite copyIcons copyData",
+    "build": "npm-run-all build:data build:full-sprite copyIcons",
     "test": "exit 0",
     "build:data": "node build/icon-json",
     "build:full-sprite": "node build/all-sprite",
     "clean": "rimraf dist",
     "copyIcons": "node build/copyIcons.js",
-    "copyData": "node build/copyDocsData.js",
     "prebuild": "npm run clean",
     "prepare": "npm run build",
     "sprite": "node build/custom-sprite",
