--- a/docs-src/package.json
+++ b/docs-src/package.json
@@ -10,12 +10,14 @@
   },
   "author": "REI Software Engineering",
   "scripts": {
-    "dev": "vue-cli-service serve",
+    "copyDocsData": "node copyDocsData",
+    "dev": "npm-run-all copyDocsData serve",
+    "serve": "vue-cli-service serve",
     "test": "exit 0",
     "lint": "vue-cli-service lint",
     "build": "vue-cli-service build",
     "deploy": "node ./deploy.js",
-    "release": "npm-run-all build deploy"
+    "release": "npm-run-all copyDocsData build deploy"
   },
   "dependencies": {
     "gh-pages": "^2.1.1"
