--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rei/cedar-icons",
-  "version": "2.0.0-alpha.1",
+  "version": "2.0.0",
   "homepage": "https://rei.github.io/cedar-icons/",
   "description": "REI Cedar Icon Library",
   "license": "MIT",
