--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "npm-publish-prerelease": "^1.0.2",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
+    "svgo": "^1.3.2",
     "svgstore": "^3.0.0-2"
   },
   "bin": {
