--- a/package.json
+++ b/package.json
@@ -31,16 +31,16 @@
   "module": "dist/icons.esm.js",
   "devDependencies": {
     "chalk": "^4.1.0",
-    "cheerio": "^1.0.0-rc.3",
+    "cheerio": "^1.0.0-rc.10",
     "cross-env": "^7.0.2",
     "fs-extra": "^9.0.1",
     "inquirer": "^7.3.3",
-    "lodash": "^4.17.19",
+    "lodash": "^4.17.21",
     "npm-publish-prerelease": "^1.0.2",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "svgo": "^1.3.2",
-    "svgstore": "^3.0.0-2"
+    "svgstore": "^3.0.1"
   },
   "bin": {
     "icon-sprite": "./build/custom-sprite.js"
